# Computacao-Distribuida

./: .gitignore
distributed-printing/: .dockerignore  README.md  docker-compose.yml  printing_pb2.py  printing_pb2_grpc.py  test_cases.py
distributed-printing/client/: Dockerfile  client.py
distributed-printing/proto/: printing.proto
distributed-printing/server/: Dockerfile  server.py
tpfinal/: README.md  docker-compose.distributed.yml  interface.bat  nginx.conf  test_desempenho.py  test_distributed.bat  test_grpc.bat
tpfinal/Codigo/: .gitignore  requirements.txt
tpfinal/Codigo/api/: Dockerfile  __init__.py  compile_proto.bat  compile_proto.sh  pyproject.toml  requirements.txt
tpfinal/Codigo/api/app/: __init__.py  db.py  hardware.py  main.py  models.py  queues.py  security.py  tasks.py  tasks_pytorch.py
tpfinal/Codigo/api/app/distributed/: __init__.py  election.py  grpc_server.py  heartbeat.py  lamport_clock.py  node.proto  node_manager.py  rpc_client.py  rpc_client_grpc.py  task_distributor.py
tpfinal/Codigo/api/app/ml/: __init__.py  model.py  pytorch_model.py
